Updated hero images and fixed sizing for hamburger menu and word wrap in the brand name.

--- a/base/static/css/Navigation-with-Button.css
+++ b/base/static/css/Navigation-with-Button.css
@@ -223,7 +223,7 @@ button {
 
 .vertical-center {
   margin: 0;
-  position: absolute;
+  position: relative;
   width: 100%;
   top: 50%;
   -ms-transform: translateY(-50%);
